For 1.19.2:
	- -DDEBUG_MALLOC for finding malloc problems;
	
	- MALLOC, REALLOC, automatically check malloc return values; exit if NULL found with file/line number.

	- chcon command added to Makefile.PL

	- #include <stdlib> added to headers.h - for AMD64 compiles.

	- code to purge malloc'd memory (in scenegraph)  on reload added to FreeWRL.

	- bug in VRML parser fixed - routing to "set_scale" in nodes without a "set_scale" eventIn now working.
	  (and, other nodes with a similar pattern, where a "set_X" or "X_changed" field exists in some other
	  node, but not the current node, is fixed)

	- Spotlight, PointLight handling problem - was not being ignored by "normalChildren()". 

	- Collision code changed to NOT malloc/free for each node; now a pool of memory is mallocd that
	  is used for all collision code. Helps speed collision detection calculations, especially on
	  nodes with a large dataset, that caused mutex locking and virtual memory slowdowns.

For 1.18.15:
	- working on spot and directional Lights.

	- headlight moved to 100 behind current camera postion, makes for smoother
	  shading of triangles whose vertexen are at corners (or out of view) of current
	  view frustum

	  PixelTexture nodes - default image caused a segfault
For 1.18.14:
	- setting SFNodes from Javascript fixed. (was setting node to NULL)

	- X3DParser - SFStrings were not being copied correctly.

	- Textures - if <=256x256, GL_LINEAR, else GL_NEAREST

	- Background - fixed bug where groundColors > #groundAngles - make last angle PI.
	  (John Stewart)

	- reading large files - malloc now bufsize<<=1 to make reading linear, not quadratic.
	  (Charles Horn, Daniel Kraft)

	- VRML parser malloc bug for storing values in Vectors fixed.
	  (Daniel Kraft)

	- fixed material transparency in VRML Proto expansions
	  (John Stewart)

	- added initial ReWire (EAI in C) support.
	  (John Stewart)

	- OS X UI issues 
	  (Sarah Dumoulin)

For 1.18.13: